--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,14 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-Light.ttf);
+    src: url(/fonts/Poppins-Light.ttf);
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-Regular.ttf);
+    src: url(/fonts/Poppins-Regular.ttf);
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-Medium.ttf);
+    src: url(/fonts/Poppins-Medium.ttf);
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -28,7 +28,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-SemiBold.ttf);
+    src: url(/fonts/Poppins-SemiBold.ttf);
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -36,7 +36,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-Bold.ttf);
+    src: url(/fonts/Poppins-Bold.ttf);
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -44,7 +44,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-ExtraBold.ttf);
+    src: url(/fonts/Poppins-ExtraBold.ttf);
     font-weight: 800;
     font-style: normal;
     font-display: swap;
@@ -52,7 +52,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-Italic.ttf);
+    src: url(/fonts/Poppins-Italic.ttf);
     font-weight: 400;
     font-style: italic;
     font-display: swap;
@@ -60,7 +60,7 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url(/public/fonts/Poppins-MediumItalic.ttf);
+    src: url(/fonts/Poppins-MediumItalic.ttf);
     font-weight: 500;
     font-style: italic;
     font-display: swap;
