--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'Poppins';
     src: url(/fonts/Poppins-Regular.ttf);
@@ -66,9 +67,19 @@
     font-display: swap;
 }
 
-#root{
+:root {
+    --dark: #101A24;
+    --dark-hover: #000000;
+    --disabled: #6E6E6E;
+}
+
+#root {
     height: 100vh;
     overflow: auto;
     display: flex;
     flex-direction: column;
+}
+
+body {
+    box-sizing: border-box;
 }
