--- a/larest-user/src/index.css
+++ b/larest-user/src/index.css
@@ -74,7 +74,7 @@
 }
 
 #root {
-    height: 100%;
+    flex: 1 1 0%;
     display: flex;
     flex-direction: column;
     overflow: auto;
@@ -82,5 +82,7 @@
 
 body {
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
 }
