--- a/larest-user/src/index.css
+++ b/larest-user/src/index.css
@@ -77,7 +77,7 @@
     flex: 1 1 0%;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    overflow: hidden;
 }
 
 body {
@@ -85,4 +85,6 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
+    margin: 0;
 }
