--- a/larest-user/src/index.css
+++ b/larest-user/src/index.css
@@ -84,7 +84,6 @@ body {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-    overflow: hidden;
+    height: 100dvh;
     margin: 0;
 }
