--- a/larest-user/src/index.css
+++ b/larest-user/src/index.css
@@ -77,7 +77,7 @@
     flex: 1 1 0%;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: auto;
 }
 
 body {
@@ -85,5 +85,5 @@ body {
     display: flex;
     flex-direction: column;
     height: 100dvh;
-    margin: 0;
+    margin: 0;  
 }
