--- a/larest-admin/src/index.css
+++ b/larest-admin/src/index.css
@@ -32,10 +32,18 @@ body {
     }
 
     .secondary-with-hover {
-        @apply text-zinc-400 hover:text-zinc-500;
+        @apply text-zinc-500 hover:text-zinc-600;
     }
 
     .table-row {
         @apply border-b border-dashed last:border-b-0 hover:bg-slate-50 hover:cursor-pointer
+    }
+
+    .table-row-header {
+        @apply font-semibold text-[0.95rem] bg-slate-50
+    }
+
+    .table-row-header th {
+        @apply py-3 px-3
     }
 }
